--- a/acgtsite/css/style.css
+++ b/acgtsite/css/style.css
@@ -167,3 +167,8 @@
     background-color: rgb(255, 152, 152);
     border: 5px solid black;
   }
+
+  #report-section {
+    display: none;
+  }
+  
